// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom dot color 1`] = `
<div
  style={
    Object {
      "width": 64,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 48,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "red",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
      style={
        Object {
          "backgroundColor": "red",
          "borderRadius": 4,
          "height": 8,
          "left": 4,
          "marginTop": 4,
          "position": "absolute",
          "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`custom style 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "width": 80,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 48,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 64,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 4,
          "height": 8,
          "left": 4,
          "marginTop": 4,
          "position": "absolute",
          "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`onDotClick handler 1`] = `
<div
  style={
    Object {
      "width": 48,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 4,
          "height": 8,
          "left": 4,
          "marginTop": 4,
          "position": "absolute",
          "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;

exports[`three dots, first is selected 1`] = `
<div
  style={
    Object {
      "width": 48,
    }
  }
>
  <div
    style={
      Object {
        "padding": "20px 0 28px",
        "position": "relative",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 0,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 16,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      onClick={[Function]}
      style={
        Object {
          "cursor": "inherit",
          "float": "left",
          "height": 8,
          "left": 32,
          "padding": 4,
          "position": "absolute",
          "width": 8,
        }
      }
    >
      <div
        className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
        style={
          Object {
            "backgroundColor": "#fff",
            "borderRadius": 4,
            "height": 8,
            "opacity": 0.5,
            "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
            "width": 8,
          }
        }
      />
    </div>
    <div
      className="MuiPaper-root-1 MuiPaper-elevation0-3 MuiPaper-rounded-2"
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 4,
          "height": 8,
          "left": 4,
          "marginTop": 4,
          "position": "absolute",
          "transition": "all 400ms cubic-bezier(0.4, 0.0, 0.2, 1)",
          "width": 8,
        }
      }
    />
  </div>
</div>
`;
